src/cassandra.rs

    pub fn cass_schema_get_udt_n(schema: *const CassSchema,
                                 keyspace: *const ::libc::c_char,
                                 keyspace_length: size_t,
                                 type_name: *const ::libc::c_char,
                                 type_name_length: size_t)
     -> *const CassDataType;
    pub fn cass_schema_meta_type(meta: *const CassSchemaMeta)
     -> CassSchemaMetaType;
    pub fn cass_schema_meta_get_entry(meta: *const CassSchemaMeta,
                                      name: *const ::libc::c_char)
     -> *const CassSchemaMeta;
    pub fn cass_schema_meta_get_entry_n(meta: *const CassSchemaMeta,
                                        name: *const ::libc::c_char,
                                        name_length: size_t)
     -> *const CassSchemaMeta;
    pub fn cass_schema_meta_get_field(meta: *const CassSchemaMeta,
                                      name: *const ::libc::c_char)
     -> *const CassSchemaMetaField;
    pub fn cass_schema_meta_get_field_n(meta: *const CassSchemaMeta,
                                        name: *const ::libc::c_char,
                                        name_length: size_t)
     -> *const CassSchemaMetaField;
    pub fn cass_schema_meta_field_name(field: *const CassSchemaMetaField,
                                       name: *mut *const ::libc::c_char,
                                       name_length: *mut size_t) -> ();
    pub fn cass_schema_meta_field_value(field: *const CassSchemaMetaField)
     -> *const CassValue;
    pub fn cass_ssl_new() -> *mut CassSsl;
    pub fn cass_ssl_free(ssl: *mut CassSsl) -> ();
    pub fn cass_ssl_add_trusted_cert(ssl: *mut CassSsl,
                                     cert: *const ::libc::c_char)
     -> CassError;
    pub fn cass_ssl_add_trusted_cert_n(ssl: *mut CassSsl,
                                       cert: *const ::libc::c_char,
                                       cert_length: size_t) -> CassError;
    pub fn cass_ssl_set_verify_flags(ssl: *mut CassSsl, flags: ::libc::c_int)
     -> ();
    pub fn cass_ssl_set_cert(ssl: *mut CassSsl, cert: *const ::libc::c_char)
     -> CassError;
    pub fn cass_ssl_set_cert_n(ssl: *mut CassSsl, cert: *const ::libc::c_char,
                               cert_length: size_t) -> CassError;
    pub fn cass_ssl_set_private_key(ssl: *mut CassSsl,
                                    key: *const ::libc::c_char,
                                    password: *const ::libc::c_char)
     -> CassError;
    pub fn cass_ssl_set_private_key_n(ssl: *mut CassSsl,
                                      key: *const ::libc::c_char,
                                      key_length: size_t,
                                      password: *const ::libc::c_char,
                                      password_length: size_t) -> CassError;
    pub fn cass_future_free(future: *mut CassFuture) -> ();
    pub fn cass_future_set_callback(future: *mut CassFuture,
                                    callback: CassFutureCallback,
                                    data: *mut ::libc::c_void) -> CassError;
    pub fn cass_future_ready(future: *mut CassFuture) -> cass_bool_t;
    pub fn cass_future_wait(future: *mut CassFuture) -> ();
    pub fn cass_future_wait_timed(future: *mut CassFuture,
                                  timeout_us: cass_duration_t) -> cass_bool_t;
    pub fn cass_future_get_result(future: *mut CassFuture)
     -> *const CassResult;
    pub fn cass_future_get_error_result(future: *mut CassFuture)
     -> *const CassErrorResult;
    pub fn cass_future_get_prepared(future: *mut CassFuture)
     -> *const CassPrepared;
    pub fn cass_future_error_code(future: *mut CassFuture) -> CassError;
    pub fn cass_future_error_message(future: *mut CassFuture,
                                     message: *mut *const ::libc::c_char,
                                     message_length: *mut size_t) -> ();
    pub fn cass_statement_new(query: *const ::libc::c_char,
                              parameter_count: size_t) -> *mut CassStatement;
    pub fn cass_statement_new_n(query: *const ::libc::c_char,
                                query_length: size_t, parameter_count: size_t)
     -> *mut CassStatement;
    pub fn cass_statement_free(statement: *mut CassStatement) -> ();
    pub fn cass_statement_add_key_index(statement: *mut CassStatement,
                                        index: size_t) -> CassError;
    pub fn cass_statement_set_keyspace(statement: *mut CassStatement,
                                       keyspace: *const ::libc::c_char)
     -> CassError;
    pub fn cass_statement_set_keyspace_n(statement: *mut CassStatement,
                                         keyspace: *const ::libc::c_char,
                                         keyspace_length: size_t)
     -> CassError;
    pub fn cass_statement_set_consistency(statement: *mut CassStatement,
                                          consistency: CassConsistency)
     -> CassError;
    pub fn cass_statement_set_serial_consistency(statement:
                                                     *mut CassStatement,
                                                 serial_consistency:
                                                     CassConsistency)
     -> CassError;
    pub fn cass_statement_set_paging_size(statement: *mut CassStatement,
                                          page_size: ::libc::c_int)
     -> CassError;
    pub fn cass_statement_set_paging_state(statement: *mut CassStatement,
                                           result: *const CassResult)
     -> CassError;
    pub fn cass_statement_set_paging_state_token(statement:
                                                     *mut CassStatement,
                                                 paging_state:
                                                     *const ::libc::c_char,
                                                 paging_state_size: size_t)
     -> CassError;
    pub fn cass_statement_set_timestamp(statement: *mut CassStatement,
                                        timestamp: cass_int64_t) -> CassError;
    pub fn cass_statement_set_retry_policy(statement: *mut CassStatement,
                                           retry_policy: *mut CassRetryPolicy)
     -> CassError;
    pub fn cass_statement_bind_null(statement: *mut CassStatement,
                                    index: size_t) -> CassError;
    pub fn cass_statement_bind_int32(statement: *mut CassStatement,
                                     index: size_t, value: cass_int32_t)
     -> CassError;
    pub fn cass_statement_bind_int64(statement: *mut CassStatement,
                                     index: size_t, value: cass_int64_t)
     -> CassError;
    pub fn cass_statement_bind_float(statement: *mut CassStatement,
                                     index: size_t, value: cass_float_t)
     -> CassError;
    pub fn cass_statement_bind_double(statement: *mut CassStatement,
                                      index: size_t, value: cass_double_t)
     -> CassError;
    pub fn cass_statement_bind_bool(statement: *mut CassStatement,
                                    index: size_t, value: cass_bool_t)
     -> CassError;
    pub fn cass_statement_bind_string(statement: *mut CassStatement,
                                      index: size_t,
                                      value: *const ::libc::c_char)
     -> CassError;
    pub fn cass_statement_bind_string_n(statement: *mut CassStatement,
                                        index: size_t,
                                        value: *const ::libc::c_char,
                                        value_length: size_t) -> CassError;
    pub fn cass_statement_bind_bytes(statement: *mut CassStatement,
                                     index: size_t, value: *const cass_byte_t,
                                     value_size: size_t) -> CassError;
    pub fn cass_statement_bind_uuid(statement: *mut CassStatement,
                                    index: size_t, value: CassUuid)
     -> CassError;
    pub fn cass_statement_bind_inet(statement: *mut CassStatement,
                                    index: size_t, value: CassInet)
     -> CassError;
    pub fn cass_statement_bind_decimal(statement: *mut CassStatement,
                                       index: size_t,
                                       varint: *const cass_byte_t,
                                       varint_size: size_t,
                                       scale: cass_int32_t) -> CassError;
    pub fn cass_statement_bind_collection(statement: *mut CassStatement,
                                          index: size_t,
                                          collection: *const CassCollection)
     -> CassError;
    pub fn cass_statement_bind_tuple(statement: *mut CassStatement,
                                     index: size_t, tuple: *const CassTuple)
     -> CassError;
    pub fn cass_statement_bind_user_type(statement: *mut CassStatement,
                                         index: size_t,
                                         user_type: *const CassUserType)
     -> CassError;
    pub fn cass_statement_bind_null_by_name(statement: *mut CassStatement,
                                            name: *const ::libc::c_char)
     -> CassError;
    pub fn cass_statement_bind_null_by_name_n(statement: *mut CassStatement,
                                              name: *const ::libc::c_char,
                                              name_length: size_t)
     -> CassError;
    pub fn cass_statement_bind_int32_by_name(statement: *mut CassStatement,
                                             name: *const ::libc::c_char,
                                             value: cass_int32_t)
     -> CassError;
    pub fn cass_statement_bind_int32_by_name_n(statement: *mut CassStatement,
                                               name: *const ::libc::c_char,
                                               name_length: size_t,
                                               value: cass_int32_t)
     -> CassError;
    pub fn cass_statement_bind_int64_by_name(statement: *mut CassStatement,
                                             name: *const ::libc::c_char,
                                             value: cass_int64_t)
     -> CassError;
    pub fn cass_statement_bind_int64_by_name_n(statement: *mut CassStatement,
                                               name: *const ::libc::c_char,
                                               name_length: size_t,
                                               value: cass_int64_t)
     -> CassError;
    pub fn cass_statement_bind_float_by_name(statement: *mut CassStatement,
                                             name: *const ::libc::c_char,
                                             value: cass_float_t)
     -> CassError;
    pub fn cass_statement_bind_float_by_name_n(statement: *mut CassStatement,
                                               name: *const ::libc::c_char,
                                               name_length: size_t,
                                               value: cass_float_t)
     -> CassError;
    pub fn cass_statement_bind_double_by_name(statement: *mut CassStatement,
                                              name: *const ::libc::c_char,
                                              value: cass_double_t)
     -> CassError;
    pub fn cass_statement_bind_double_by_name_n(statement: *mut CassStatement,
                                                name: *const ::libc::c_char,
                                                name_length: size_t,
                                                value: cass_double_t)
     -> CassError;
